--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -42,6 +42,7 @@
             <Color x:Key="ToolbarIconColorFadedLight">#999999</Color>
 
             <x:Double x:Key="FontSizeHeader">20</x:Double>
+            <x:Double x:Key="FontSizeHeaderMinor">18</x:Double>
             <x:Double x:Key="FontSizeNormal">13</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
             <OnPlatform x:Key="HeaderFavoriteStarSize" x:TypeArguments="x:Double" Default="16">
@@ -108,13 +109,28 @@
             </Style>
 
             <Style x:Key="AlubumItem" TargetType="Grid">
-                <Setter Property="WidthRequest" Value="180" />
-                <Setter Property="HeightRequest" Value="238" />
-                <Setter Property="Padding" Value="{OnPlatform WinUI='8,6,16,6', Default='16,6,16,6'}" />
+                <Setter Property="WidthRequest" Value="160" />
+                <Setter Property="HeightRequest" Value="228" />
+                <Setter Property="Padding" Value="{OnPlatform WinUI='0', Default='0'}" />
                 <Setter Property="Margin" Value="0,0" />
                 <Setter Property="ColumnDefinitions" Value="40, *" />
-                <Setter Property="RowDefinitions" Value="28, 160, 20, 20" />
+                <Setter Property="RowDefinitions" Value="20, 168, 20, 20" />
             </Style>
+
+            <Style x:Key="AlbumHeaderTextStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="{StaticResource FontSizeHeaderMinor}" />
+                <Setter Property="FontAttributes" Value="{OnPlatform Default=None, Android=Bold}" />
+                <Setter Property="MaxLines" Value="1" />
+                <Setter Property="VerticalTextAlignment" Value="End" />
+                <Setter Property="LineBreakMode" Value="TailTruncation" />
+            </Style>
+
+            <Style x:Key="AlbumNormalTextStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="{StaticResource FontSizeNormal}" />
+                <Setter Property="MaxLines" Value="1" />
+                <Setter Property="LineBreakMode" Value="TailTruncation" />
+            </Style>
+
 
             <Style x:Key="HyperlinkStyle" TargetType="Span">
                 <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
