--- a/Source/Pekspro.RadioStorm.MAUI/Views/CurrentPlayingLargeControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/CurrentPlayingLargeControl.xaml
@@ -15,29 +15,8 @@
             </Grid.RowDefinitions>
 
 
-            <Label 
-                Grid.Row="0"
-                HorizontalOptions="Center"
-                Text="{Binding ChannelData.Title, Mode=OneWay}"
-                Style="{StaticResource ListHeaderTextStyle}"
-                LineBreakMode="TailTruncation"
-                Margin="0,0,0,4"
-				MaxLines="1"
-				/>
-
-            <Label 
-                Grid.Row="1"
-                HorizontalOptions="Center"
-                Text="{Binding ChannelData.Status.CurrentProgram, Mode=OneWay}"
-                Style="{StaticResource DetailedTextStyle}"
-                LineBreakMode="TailTruncation"
-				MaxLines="1"
-				Margin="0"
-				Opacity="0.8"
-				/>
-            
             <Image
-               Grid.Row="2"
+               Grid.Row="0"
                HorizontalOptions="Center"
                VerticalOptions="Center"
 			   WidthRequest="256"
@@ -51,6 +30,26 @@
                 </Image.Source>
             </Image>
 
+            <Label 
+                Grid.Row="1"
+                HorizontalOptions="Center"
+                Text="{Binding ChannelData.Title, Mode=OneWay}"
+                Style="{StaticResource ListHeaderTextStyle}"
+                LineBreakMode="TailTruncation"
+                Margin="0,10,0,10"
+				MaxLines="1"
+				/>
+
+            <Label 
+                Grid.Row="2"
+                HorizontalOptions="Center"
+                Text="{Binding ChannelData.Status.CurrentProgram, Mode=OneWay}"
+                Style="{StaticResource DetailedTextStyle}"
+                LineBreakMode="TailTruncation"
+				MaxLines="1"
+				Margin="0"
+				Opacity="0.8"
+				/>
             
         </Grid>
 
@@ -62,27 +61,9 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
-            <Label 
-                Grid.Row="0"
-                HorizontalOptions="Center"
-                Text="{Binding EpisodeData.ProgramName, Mode=OneWay}"
-                Style="{StaticResource ListHeaderTextStyle}"
-                LineBreakMode="TailTruncation"
-				MaxLines="1"
-				/>
 
-            <Label 
-                Grid.Row="1"
-                HorizontalOptions="Center"
-                Text="{Binding EpisodeData.Title, Mode=OneWay}"
-                Style="{StaticResource ListNormalTextStyle}"
-                LineBreakMode="TailTruncation"
-				Margin="0,0,0,4"
-				MaxLines="1"
-				/>
-            
             <Image
-               Grid.Row="2"
+               Grid.Row="0"
                HorizontalOptions="Center"
                VerticalOptions="Center"
 			   WidthRequest="256"
@@ -95,6 +76,25 @@
                     />
                 </Image.Source>
             </Image>
+            
+            <Label 
+                Grid.Row="1"
+                HorizontalOptions="Center"
+                Text="{Binding EpisodeData.ProgramName, Mode=OneWay}"
+                Style="{StaticResource ListHeaderTextStyle}"
+                Margin="0,10,0,10"
+				LineBreakMode="TailTruncation"
+				MaxLines="1"
+				/>
+
+            <Label 
+                Grid.Row="2"
+                HorizontalOptions="Center"
+                Text="{Binding EpisodeData.Title, Mode=OneWay}"
+                Style="{StaticResource ListNormalTextStyle}"
+                MaximumWidthRequest="256"
+				MaxLines="2"
+				/>
 
             <Label 
                 Grid.Row="3"
