Removes debug image on large image.

--- a/Source/Pekspro.RadioStorm.MAUI/Views/LargeMediaButtonUserControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/LargeMediaButtonUserControl.xaml
@@ -98,9 +98,9 @@
                HeightRequest="4"
                Aspect="AspectFill"
                 >
-            <Image.Source>
+            <!--<Image.Source>
                 <UriImageSource Uri="https://sverigesradio.se/sida/images/132/2186745_512_512.jpg?preset=api-default-square" />
-            </Image.Source>
+            </Image.Source>-->
         </Image>
 
         <Ellipse x:Name="ButtonBackground"
