--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
@@ -2,44 +2,46 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:r="clr-namespace:Pekspro.RadioStorm.UI.Resources;assembly=Pekspro.RadioStorm.UI"
              xmlns:c="clr-namespace:Pekspro.RadioStorm.MAUI.Controls"
+             xmlns:vm="clr-namespace:Pekspro.RadioStorm.UI.ViewModel.Player;assembly=Pekspro.RadioStorm.UI"
              xmlns:views="clr-namespace:Pekspro.RadioStorm.MAUI.Views"
              x:Class="Pekspro.RadioStorm.MAUI.Pages.Player.CurrentPlayingPage"
+             x:DataType="vm:CurrentPlayingViewModel"
              Title="{x:Static r:Strings.CurrentPlaying_Title}">
 
     <ContentPage.ToolbarItems>
         <ToolbarItem 
-                Command="{Binding ToggleSleepTimerCommand}"
+                Command="{Binding PlayerViewModel.ToggleSleepTimerCommand}"
                 IconImageSource="{OnPlatform Default=sleeptimer_margin_0.png, Android=sleeptimer_margin_1of4.png}"
                 Text="{x:Static r:Strings.SleepTimer_Title}"
                 Order="Primary"
                 Priority="0" />
         <c:BindableToolbarItem 
                 x:Name="ToolbarItemVerySlow"
-                Command="{Binding SetSpeedVerySlowCommand}"
+                Command="{Binding PlayerViewModel.SetSpeedVerySlowCommand}"
                 Text="{x:Static r:Strings.Player_MenuSpeed_VerySlow}"
                 Order="Secondary"
                 Priority="10" />
         <c:BindableToolbarItem 
                 x:Name="ToolbarItemSlow"
-                Command="{Binding SetSpeedSlowCommand}"
+                Command="{Binding PlayerViewModel.SetSpeedSlowCommand}"
                 Text="{x:Static r:Strings.Player_MenuSpeed_Slow}"
                 Order="Secondary"
                 Priority="11" />
         <c:BindableToolbarItem 
                 x:Name="ToolbarItemNormal"
-                Command="{Binding SetSpeedNormalCommand}"
+                Command="{Binding PlayerViewModel.SetSpeedNormalCommand}"
                 Text="{x:Static r:Strings.Player_MenuSpeed_Normal}"
                 Order="Secondary"
                 Priority="12" />
         <c:BindableToolbarItem 
                 x:Name="ToolbarItemFast"
-                Command="{Binding SetSpeedFastCommand}"
+                Command="{Binding PlayerViewModel.SetSpeedFastCommand}"
                 Text="{x:Static r:Strings.Player_MenuSpeed_Fast}"
                 Order="Secondary"
                 Priority="13" />
         <c:BindableToolbarItem 
                 x:Name="ToolbarItemVeryFast"
-                Command="{Binding SetSpeedVeryFastCommand}"
+                Command="{Binding PlayerViewModel.SetSpeedVeryFastCommand}"
                 Text="{x:Static r:Strings.Player_MenuSpeed_VeryFast}"
                 Order="Secondary"
                 Priority="14" />
@@ -49,97 +51,318 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="48" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="auto" />
-                <RowDefinition Height="*" />
-            </Grid.RowDefinitions>
+        <!-- Background -->
+        <Image Source="{Binding EpisodeData.ProgramDetails.ProgramImage.HighResolution}"
+               VerticalOptions="FillAndExpand"
+               HorizontalOptions="FillAndExpand"
+               IsVisible="{Binding EpisodeData, Converter={StaticResource NullToIsVisibleConverter}}"
+               Grid.RowSpan="3"
+               Aspect="AspectFill"
+               Opacity="{OnPlatform Default=0.2, Android=0.3}"
+                />
 
+        <Image Source="{Binding ChannelData.ChannelImage.HighResolution}"
+               VerticalOptions="FillAndExpand"
+               HorizontalOptions="FillAndExpand"
+               IsVisible="{Binding ChannelData, Converter={StaticResource NullToIsVisibleConverter}}"
+               Grid.RowSpan="3"
+               Aspect="AspectFill"
+               Opacity="{OnPlatform Default=0.2, Android=0.3}"
+                />
+
+        <!-- Upper panel -->
+        <Grid ColumnDefinitions="*, auto">
+
+            <!-- Top left, current episode info -->
+            <Grid Grid.Row="0"
+                Padding="8" 
+                IsVisible="{Binding EpisodeData, Converter={StaticResource NullToIsVisibleConverter}}"
+                VerticalOptions="Start"
+                HorizontalOptions="Fill"
+                >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Grid.Row="0"
+                        Grid.Column="0"
+                        Grid.RowSpan="2"
+			            WidthRequest="64"
+			            HeightRequest="64"
+                        Margin="0,0,8,0">
+                    <Image.Source>
+                        <UriImageSource Uri="{Binding EpisodeData.EpisodeImage.HighResolution, Mode=OneWay}"
+                        CacheValidity="1"  
+                        CachingEnabled="True"
+                    />
+                    </Image.Source>
+                </Image>
+
+                <Label  Grid.Row="0"
+                        Grid.Column="1"
+                        HorizontalOptions="StartAndExpand"
+                        FontSize="24"
+                        Text="{Binding EpisodeData.ProgramName, Mode=OneWay}"
+                        Style="{StaticResource ListHeaderTextStyle}"
+                        VerticalOptions="Center"
+				        LineBreakMode="TailTruncation"
+				        MaxLines="1"
+				/>
+
+                <Label  Grid.Row="1"
+                        Grid.Column="1"
+                        HorizontalOptions="StartAndExpand"
+                        Padding="0,0,20,0"
+                        Text="{Binding EpisodeData.Title, Mode=OneWay}"
+                        Style="{StaticResource ListNormalTextStyle}"
+				        LineBreakMode="TailTruncation"
+                        MaxLines="2"
+				        />  
+            </Grid>
+
+            <!-- Top left, channel current program info -->
+            <Grid Grid.Row="0"
+                Padding="8" 
+                IsVisible="{Binding ChannelData, Converter={StaticResource NullToIsVisibleConverter}}"
+                VerticalOptions="Start"
+                HorizontalOptions="Fill"
+                >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Image Grid.Row="0"
+                        Grid.Column="0"
+                        Grid.RowSpan="2"
+			            WidthRequest="64"
+			            HeightRequest="64"
+                        Margin="0,0,8,0">
+                    <Image.Source>
+                        <UriImageSource Uri="{Binding ChannelData.Status.CurrentProgramImage.LowResolution, Mode=OneWay}"
+                        CacheValidity="1"  
+                        CachingEnabled="True"
+                    />
+                    </Image.Source>
+                </Image>
+
+
+                <views:ChannelProgressBar Grid.Column="1"
+                                          Grid.Row="1"
+                                          Margin="0,0,0,0"
+                                          BindingContext="{Binding ChannelData}"
+                                          />
+                <Label  Grid.Row="0"
+                        Grid.Column="1"
+                        HorizontalOptions="StartAndExpand"
+                        FontSize="24"
+                        Text="{Binding ChannelData.Title, Mode=OneWay}"
+                        Style="{StaticResource ListHeaderTextStyle}"
+                        VerticalOptions="Center"
+				        LineBreakMode="TailTruncation"
+				        MaxLines="1"
+				/>
+
+                <Label  Grid.Row="1"
+                        Grid.Column="1"
+                        HorizontalOptions="StartAndExpand"
+                        Padding="0,0,20,0"
+                        Style="{StaticResource ListNormalTextStyle}"
+				        LineBreakMode="TailTruncation"
+				        >
+                    <Label.Text>
+                        <MultiBinding StringFormat="{}{0} {1}">
+                            <Binding Path="ChannelData.Status.CurrentTimePeriod.StartTimeString" />
+                            <Binding Path="ChannelData.Status.CurrentProgram" />
+                        </MultiBinding>
+                    </Label.Text>
+                </Label>
+
+            </Grid>
+
+            <!-- Sleep timer -->
             <HorizontalStackLayout
+                Grid.Column="1" 
+                VerticalOptions="Start"
                 HorizontalOptions="End"
-                IsVisible="{Binding IsSleepTimerRunning}"        
-                Grid.Row="0" 
+                IsVisible="{Binding PlayerViewModel.IsSleepTimerRunning}"
                 Padding="{OnPlatform Default=8, WinUI=0}" 
-                Grid.ColumnSpan="3">
+                >
 
                 <Grid VerticalOptions="Center"
-                      Opacity="{Binding CanSleepTimerDecrease, Converter={StaticResource BoolToDoubleOneAndHalfConverter}}"
-                      WidthRequest="{OnPlatform Default=32, WinUI=48}">
+                    Opacity="{Binding PlayerViewModel.CanSleepTimerDecrease, Converter={StaticResource BoolToDoubleOneAndHalfConverter}}"
+                    WidthRequest="{OnPlatform Default=32, WinUI=48}">
 
                     <Path Style="{x:StaticResource PathDecrease}"
-                          WidthRequest="24" />
+                        WidthRequest="24" />
 
                     <ImageButton Style="{x:StaticResource PlayerButton}"
-                                 Command="{Binding DecreaseSleepTimerCommand}"
-                                 HorizontalOptions="Start" />
+                                Command="{Binding PlayerViewModel.DecreaseSleepTimerCommand}"
+                                HorizontalOptions="Start" />
                 </Grid>
 
                 <Grid RowDefinitions="auto, auto" 
-                      Padding="{OnPlatform Default='4,0', WinUI='8,0'}"
-                      VerticalOptions="Center">
+                    Padding="{OnPlatform Default='4,0', WinUI='8,0'}"
+                    VerticalOptions="Center">
                     <Label Padding="0,6,0,0"
-                           Text="{Binding SleepTimerText}"
-                           FontSize="{StaticResource FontSizeDetails}"
-                           HorizontalTextAlignment="Center" />
+                        Text="{Binding PlayerViewModel.SleepTimerText}"
+                        FontSize="{StaticResource FontSizeDetails}"
+                        HorizontalTextAlignment="Center" />
 
                     <Label Grid.Row="1"
-                           Padding="0,0,0,4"
-                           Text="{x:Static r:Strings.SleepTimer_Title}"
-                           FontSize="{StaticResource FontSizeDetails}"
-                           HorizontalTextAlignment="Center" />
+                        Padding="0,0,0,4"
+                        Text="{x:Static r:Strings.SleepTimer_Title}"
+                        FontSize="{StaticResource FontSizeDetails}"
+                        HorizontalTextAlignment="Center" />
                 </Grid>
 
                 <Grid VerticalOptions="Center"
-                      WidthRequest="{OnPlatform Default=32, WinUI=48}">
+                    WidthRequest="{OnPlatform Default=32, WinUI=48}">
 
                     <Path Style="{x:StaticResource PathIncrease}"
-                          WidthRequest="24" />
+                        WidthRequest="24" />
 
                     <ImageButton Style="{x:StaticResource PlayerButton}"
-                                 Command="{Binding IncreaseSleepTimerCommand}" />
+                                Command="{Binding PlayerViewModel.IncreaseSleepTimerCommand}" />
                 </Grid>
-
-
-
             </HorizontalStackLayout>
 
-            <views:CurrentPlayingLargeControl Grid.Row="2" />
+        </Grid>
 
-            <views:PlayerButtonsControl Grid.Row="4" Grid.Column="2" HorizontalOptions="Center"/>
+        <!-- Buttons -->
+        <views:PlayerButtonsControl 
+            Grid.Row="1" 
+            HorizontalOptions="Center"/>
 
-            <VerticalStackLayout Grid.Row="6" HorizontalOptions="Center"
-                IsVisible="{Binding HasPlayList}" >
+        <!-- Lower panel -->
+        <Grid Grid.Row="2">
 
-                <Grid 
-                    WidthRequest="{OnPlatform Default=56, WinUI=48}">
+            <!-- Playlist info -->
+            <VerticalStackLayout 
+                HorizontalOptions="Center"
+                Margin="0,40,0,0"
+                VerticalOptions="Start"
+                IsVisible="{Binding PlayerViewModel.HasPlayList}"
+                >
+                <VerticalStackLayout HorizontalOptions="End">
+                    <Grid 
+                        WidthRequest="{OnPlatform Default=56, WinUI=48}">
 
-                    <ImageButton Style="{x:StaticResource PlayerButton}"
-                     Source="{StaticResource PlayList}"
-                     Clicked="ButtonPlaylist_Clicked" />
-                </Grid>
+                        <ImageButton Style="{x:StaticResource PlayerButton}"
+                            Source="{StaticResource PlayList}"
+                            Clicked="ButtonPlaylist_Clicked" />
+                    </Grid>
 
-                <Label FontSize="{StaticResource FontSizeDetails}"
-                   HorizontalOptions="Center" 
-                   Margin="0,-10,0,0"
-                   >
+                    <Label FontSize="{StaticResource FontSizeDetails}"
+                        HorizontalOptions="Center" 
+                        Margin="0,-10,0,0"
+                        >
+                        <Label.Text>
+                            <MultiBinding StringFormat="{}{0} / {1}">
+                                <Binding Path="PlayListItemIndex" />
+                                <Binding Path="PlayListItemCount" />
+                            </MultiBinding>
+                        </Label.Text>
+                    </Label>
+                </VerticalStackLayout>
+            </VerticalStackLayout>
+
+            <!-- Next episode info -->
+            <VerticalStackLayout 
+                HorizontalOptions="End"
+                VerticalOptions="End"
+                Margin="20,0,20,20"
+                IsVisible="{Binding PlayerViewModel.HasPlayList}"
+                >
+                <Label 
+                    HorizontalOptions="End"
+                    IsVisible="{Binding NextEpisodeData, Converter={StaticResource NullToIsVisibleConverter}}"
+                    Style="{StaticResource DetailedTextStyle}"
+                    LineBreakMode="TailTruncation"
+				    Margin="0,4,0,0"
+				    MaxLines="2"
+				    >
                     <Label.Text>
-                        <MultiBinding StringFormat="{}{0} / {1}">
-                            <Binding Path="PlayListItemIndex" />
-                            <Binding Path="PlayListItemCount" />
+                        <MultiBinding StringFormat="{x:Static r:Strings.Episodes_NextEpisode}">
+                            <Binding Path="NextEpisodeData.Title" />
                         </MultiBinding>
                     </Label.Text>
                 </Label>
             </VerticalStackLayout>
+
+
+            <!-- Lower right, channel next program info -->
+            <Grid Grid.Row="0"
+                Padding="8" 
+                IsVisible="{Binding ChannelData, Converter={StaticResource NullToIsVisibleConverter}}"
+                VerticalOptions="End"
+                HorizontalOptions="Fill"
+                >
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                </Grid.ColumnDefinitions>
+
+                <Image Grid.Row="0"
+                       Grid.Column="1"
+                       Grid.RowSpan="2"
+			           WidthRequest="64"
+			           HeightRequest="64"
+                       Margin="0,0,0,0">
+                    <Image.Source>
+                        <UriImageSource Uri="{Binding ChannelData.Status.NextProgramImage.LowResolution, Mode=OneWay}"
+                        CacheValidity="1"  
+                        CachingEnabled="True"
+                    />
+                    </Image.Source>
+                </Image>
+
+                <Label  Grid.Row="0"
+                        Grid.Column="0"
+                        HorizontalOptions="EndAndExpand"
+                        FontSize="24"
+                        Text="{Binding ChannelData.Title, Mode=OneWay}"
+                        Style="{StaticResource ListHeaderTextStyle}"
+                        Padding="0,0,8,0"
+                        VerticalOptions="Center"
+				        LineBreakMode="TailTruncation"
+				        MaxLines="1"
+				/>
+
+                <Label  Grid.Row="1"
+                        Grid.Column="0"
+                        HorizontalOptions="EndAndExpand"
+                        Padding="0,0,8,0"
+                        Style="{StaticResource ListNormalTextStyle}"
+				        LineBreakMode="TailTruncation"
+				        >
+                    <Label.Text>
+                        <MultiBinding StringFormat="{}{0} {1}">
+                            <Binding Path="ChannelData.Status.NextTimePeriod.StartTimeString" />
+                            <Binding Path="ChannelData.Status.NextProgram" />
+                        </MultiBinding>
+                    </Label.Text>
+                </Label>
+            </Grid>
         </Grid>
 
-        <views:PlayerControl x:Name="PlayerControl" Grid.Row="1" />
+        <views:PlayerControl x:Name="PlayerControl" Grid.Row="3" />
     </Grid>
 </ContentPage>
