--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Player/CurrentPlayingPage.xaml
@@ -60,7 +60,7 @@
                VerticalOptions="FillAndExpand"
                HorizontalOptions="FillAndExpand"
                IsVisible="{Binding EpisodeData, Converter={StaticResource NullToIsVisibleConverter}}"
-               Grid.RowSpan="3"
+               Grid.RowSpan="4"
                Aspect="AspectFill"
                Opacity="{OnPlatform Default=0.2, Android=0.3}"
                 />
@@ -69,7 +69,7 @@
                VerticalOptions="FillAndExpand"
                HorizontalOptions="FillAndExpand"
                IsVisible="{Binding ChannelData, Converter={StaticResource NullToIsVisibleConverter}}"
-               Grid.RowSpan="3"
+               Grid.RowSpan="4"
                Aspect="AspectFill"
                Opacity="{OnPlatform Default=0.2, Android=0.3}"
                 />
@@ -246,7 +246,7 @@
         <views:PlayerButtonsControl 
             Grid.Row="1" 
             HorizontalOptions="Center"/>
-
+        
         <!-- Lower panel -->
         <Grid Grid.Row="2">
 
@@ -363,6 +363,10 @@
             </Grid>
         </Grid>
 
-        <views:PlayerControl x:Name="PlayerControl" Grid.Row="3" />
+        <Grid Grid.Row="3" 
+              IsVisible="{Binding PlayerViewModel.IsCurrentItemEpisode}"
+            >
+            <views:PlayerPositionControl />
+        </Grid>
     </Grid>
 </ContentPage>
